--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Karunarohilla.github.io/reactcode",
+  "homepage": "https://Karunarohilla.github.io/reactcodenew",
   "name": "reactcode",
   "version": "0.1.0",
   "private": true,
